manifests/03_api/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-asp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: kdeit/aspapi:latest
        imagePullPolicy: "Always"
        ports:
        - containerPort: 8080
