manifests/03_api/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: asp-service
spec:
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      name: http
