manifests/03_api/api-ingress.yaml
#minikube addons enable ingress
#minikube addons list
#sudo minikube tunnel — macOs

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    
spec:
  ingressClassName: nginx
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: asp-service
            port: 
              number: 80
